--- a/bootcamp/quantum_geometric.tex
+++ b/bootcamp/quantum_geometric.tex
@@ -90,502 +90,6 @@
 \titlepage
 \end{frame}
 
-\section{Introduction}
-
-\begin{frame}\frametitle{Instructional team}
-A physicist, an engineer, and a technician walk into a classroom...
-\end{frame}
-
-\begin{frame}
-\frametitle{The Engineer: Brian Rashap, Ph.D.}
-\begin{columns}
-\begin{column}{6.5cm}
-\begin{itemize}
-\item Proud husband of Krista and father of Shelby (27) and Ethan (23)
-\item Electrical Engineer (Michigan) with 23 years industrial experience (Intel)
-\item Created and taught IoT Bootcamp for 5 years (and going)
-\item Hobbies: painting, cycling, swimming, reading, spending time with family
-\end{itemize}
-\end{column}
-\begin{column}{4.5cm}
-\begin{center}
-\includegraphics[width=4.5cm]{fig/rashapfamily.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}
-\frametitle{The Physicist: Megan Ivory}
-\begin{columns}
-\begin{column}{8cm}
-\begin{itemize}
-\item Foster mom to two cats, Joey and Tessa; auntie to two humans, Liana and Azeria
-\item PhD in atomic physics (William and Mary), startup ColdQuanta (now Infleqtion), Univ of Washington, Sandia since 2019 working on atomic clocks, quantum computers, and quantum programs like QuLL!
-\item Outside hobbies: trail running, hiking, gardening, backpacking, trad climbing, canyoneering, and skiing
-\item Inside hobbies: cooperative board games, reading trashy fantasy series, acting/writing
-\end{itemize}
-\end{column}
-\begin{column}{3.5cm}
-\begin{center}
-\includegraphics[width=3.5cm]{fig/meganfam.jpg}
-\end{center}
-\end{column}
-\end{columns}
-
-\vspace{0.5cm}
-
-I’ve never taken a quantum information science class…
-\end{frame}
-
-\begin{frame}
-\frametitle{The Technician: Shawn Morales}
-\begin{columns}
-\begin{column}{6cm}
-\begin{itemize}
-\item Blessed husband of Joy and proud father of Katelyn (29) and Kimber (28)
-\item Intel Manufacturing Technician of 32 years
-\item Worked on 26 different tools within Intel
-\item Adore my time with family, mountain biking, and the great outdoors
-\end{itemize}
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=4.5cm]{fig/shawn.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Student Introductions}
-\begin{itemize}
-\item Your name
-\item What were you up to before starting the bootcamp
-\item Any prior experience with math, science, machining, etc.
-\item What do you hope to get out of the bootcamp
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Drinks, Lunch and Snacks}
-\begin{itemize}
-\item There is a kitchenette down the hall with coffee/tea, snacks, frig, microwave
-\begin{itemize}
-\item The rest of the room is the TSL Lab - please don't disturb it
-\item Please clean up the area every time you use it.
-\item Don't leave leftovers overnight in the frig
-\end{itemize}
-\item Drink are allowed in the QuLL, but not near the optical tables or vacuum systems
-\item You can eat lunch in the QuLL, 
-\begin{itemize}
-\item There will be a mid-day 1 hour lunch break
-\item Again, no food/drink near optical tables or vacuum systems
-\item Tables wiped down at the end of lunch
-\end{itemize}
-\item No food trash in QuLL garbage can (use the kitchenette trash)
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}\frametitle{Class Rules}
-\begin{itemize}
-\item Respect each other. Help each other.
-\item Ask questions. 
-\item Be on time (let us know via Slack if you won't be here) 
-\item Keep your workspace and the classroom neat and tidy.
-\item If you are struggling, let us know. We are here to HELP!
-\item Class hours
-\begin{itemize}
-\item Mon-Th: 8am to 5pm \footnote{Doors open at 7:50, please be in your seats ready to learn by 8:00} and Friday: 8am to 3pm \footnote{Occasionally on Friday there will be optional activities from 3 to 5}
-\item Lunch Break: 1 hour near noon. Maybe combined with work time. 
-\item Please respect the instructors' lunch break as well.
-\end{itemize}
-\item Phone Policy: phones should not be out or used during class
-\begin{itemize}
-\item No gaming, no surfing social media
-\item If you need to take/make a call, please set out of the classroom
-\item Exceptions: two-factor authentication, pictures of projects, class videos
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Credit for Prior Learning (CPL)}
-If students enroll in an academic program at CNM, they are eligible for up to 24 credits though CPL:
-
-\begin{itemize}
-\item Current CPL (will be finalized before December)
-\begin{itemize}
-\item MATH 1220 College Algebra
-\item BCIS 1110 Fundamentals of Information Literacy and Systems
-\item BUSA Business Professionalism
-\end{itemize}
-\item CPL that can be claimed starting in Fall 2026
-\begin{itemize}
-\item ENGT 10xx Optics
-\item ENGT 20xx Laser and Photonics
-\item CSCI 10xx Survey of Quantum Computing
-\item CSCI 20xx Quantum Hardware
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Professional Development and Guest Speakers}
-\begin{columns}
-\begin{column}{5.5cm}
-\begin{itemize}
-\item Clifton Strength Finder
-\item CNM Workforce and Community Success
-\item LinkedIn / Online Job Search
-\item Resume Workshop
-\item Interview Skills
-\item Effective Influencing
-\item Constructive Confrontation
-\item Presentation/Pitch Pitch
-\end{itemize}
-\end{column}
-\begin{column}{5.5cm}
-\begin{itemize}
-\item City of ABQ
-\item Elevate Quantum
-\item Quantum NM Institute / UNM
-\item Quantinuum
-\item Qunnect
-\item Vescent
-\item 3D Glass Solutions
-\item Infleqtion
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
-
-
-
-\begin{frame}\frametitle{Foundation of Lean Certificate}
-\begin{center}
-\includegraphics[width=8cm]{fig/nmmep.png} 
-\end{center}
-\end{frame}
-
-
-\begin{frame}\frametitle{IPC Solder Certification}
-\begin{columns}
-\begin{column}{5.5cm}
-	\begin{center}	
-	\includegraphics[width=5cm]{fig/ipc1.png} 
-	\end{center}
-\end{column}
-\begin{column}{5.5cm}
-	\begin{center}	
-	\includegraphics[width=5cm]{fig/ipc2.jpg} 
-	\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-
-
-\begin{frame}\frametitle{Important Attribute in an Employee}
-\begin{columns}
-\begin{column}{5cm}
-\begin{itemize}
-\item Tolerance of Ambiguity
-\item Attention to Detail
-\item Reliability 
-\item Curiosity
-\item Structured Problem Solving
-\end{itemize}
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=3.5cm]{fig/scimeth.jpg}
-\end{center}
-
-\end{column}
-\end{columns}
-
-
-\vspace{1cm}
-
-Note: employers regularly ask the instructional team for references, it is these attributes that we will be the basis of our recommendation. 
-\end{frame}
-
-\section{Overview: QIS in NM}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide2.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide4.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/supercat.jpg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide5.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide6.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide7.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide8.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide9.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide10.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide11.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide12.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide13.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide14.jpeg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Introduction}
-\begin{center}
-\includegraphics[width=12cm]{fig/Slide15.jpeg}
-\end{center}
-\end{frame}
-
-
-
-\begin{frame}\frametitle{What you will learn}
-\begin{itemize}
-\item Optics
-\item Lasers / Photonics
-\item Ultra-High Vacuum Systems
-\item Quantum Phenomenon
-\item Applied Mathematics
-\item Structured Problem Solving
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}\frametitle{Brightspace}
-\begin{center}
-\includegraphics[width=10cm]{fig/brightspace1.jpg}
-
-\vspace{1cm}
-
-\includegraphics[width=10cm]{fig/brightspace2.jpg}
-\end{center}
-\end{frame}
-
-
-\begin{frame}\frametitle{Solidworks - Windows Users}
-
-
-To install Solidworks (Windows only), go to \url{http://www.SolidWorks.com/SEK}
-\begin{itemize}
-\item Enter your contact information.
-\item Check the radio button “Yes” under "I already have a Serial Number that starts with 9020".
-\item Select the version: 2024 SP5.0 and click Request Download.
-\item On the next page, Accept the agreement and continue.
-\item On the final page, click the Download button to download the SolidWorks Installation Manager.
-\item Unzip the files to launch the Installation.
-\item Select the option for Individual/On this machine.
-\item Install using the following serial number provided by your instructor.
-\end{itemize}
-
-
-
-\end{frame}
-
-\begin{comment}
-
-macOS and Linux users will use onShape: \url{https://www.onshape.com/en/education/}
-
-2021-2022: 9020005002143476M2TGM8G4
-2022-2023: 9020005328617363VNZVR37D
-
-
-1.  Uninstall any/all previous version of SOLIDWORKS
-2.  Go to www.solidworks.com/SEK
-3.  Use SEK-ID = XSEK12 and enter all relevant information into the form
-4.  Choose 2023 for the most recent version of SOLIDWORKS
-5.  You will then be asked to enter the school’s unique SEK Serial Number:
-Your Student Download Serial Number is:
-
-9020005723476091HT7RDP86 - (Qty: 60)
-9020005723816337C39Z2D27 - (Qty: 20)
-
-* Follow all remaining instructions and accept all defaults
-* Your VAR Name is GoEngineer
-
-\end{comment}
-
-\begin{frame}\frametitle{Other Software}
-\begin{enumerate}
-\item Bambu Studio
-	\begin{itemize}
-	\item \url{https://bambulab.com/en/download/studio}
-	\end{itemize}
-\item Microsoft Excel
-	\begin{itemize}
-	\item \url{https://office365.com}
-	\item Log in with your CNM credentials
-	\item Download excel (and any other office programs) 
-	\end{itemize}
-\item Adobe Illustrator 
-	\begin{itemize}
-	\item \url{https://adobe.com/creativecloud}
-	\item Log in with your CNM credentials
-	\item Select Work/School account 
-	\end{itemize}
-\item Octave
-	\begin{itemize}
-	\item \url{https://octave.org/download}
-	\end{itemize}
-\item Bookmark the following: 
-	\begin{itemize}
-	\item \url{https://www.desmos.com}
-	\item \url{https://quantum.cloud.ibm.com/composer}
-	\item \url{https://colab.research.google.com}
-	\end{itemize}
-\end{enumerate}
-\end{frame}
-
-\begin{frame}\frametitle{Inaugural Cohort}
-\begin{center}
-\includegraphics[width=10cm]{fig/underconstruction.jpg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Pre Knowledge Check}
-\begin{center}
-\includegraphics[width=8cm]{fig/precat.jpg}
-\end{center}
-
-\vspace{0.25cm}
-\begin{itemize}
-\item We are assuming no prior knowledge
-\item Pre and Post check will be used to help instructional team for future cohorts
-\item D) I am not familiar with this concept is an option on every question
-\end{itemize}
-
-
-\end{frame}
-
-
-
-\section{Safety}
-
-\begin{frame}\frametitle{Safety Walk}
-\begin{center}
-\includegraphics[width=6cm]{fig/gemba.png}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Laser Safety - Laser Classes}
-\begin{center}
-\includegraphics[width=10cm]{fig/lasersafe.jpg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Laser Safety - Class 2}
-\begin{center}
-\includegraphics[width=10cm]{fig/lsafe.png}
-\end{center}
-\begin{itemize}
-\item Class 2 lasers, which are limited to 1 mW of visible continuous-wave radiation, are safe because the blink reflex will limit the exposure in the eye to 0.25 seconds. This category only applies to visible radiation (400 - 700 nm).
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Laser Safety - Class 3R}
-\begin{center}
-\includegraphics[width=10cm]{fig/lsafe.png}
-\end{center}
-\begin{itemize}
-\item Class 3R lasers produce visible and invisible light that is hazardous under direct and specular-reflection viewing conditions. Eye injuries may occur if you directly view the beam, especially when using optical instruments. Lasers in this class are considered safe as long as they are handled with restricted beam viewing. Visible, continuous-wave lasers in this class are limited to 5 mW of output power.
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Laser Safety - Class 3R}
-\begin{center}
-\includegraphics[width=10cm]{fig/lsafe.png}
-\end{center}
-\begin{itemize}
-\item Class 3B lasers are hazardous to the eye if exposed directly. Diffuse reflections are usually not harmful. Safe handling of devices in this class includes wearing protective eyewear where direct viewing of the laser beam may occur. Lasers of this class must be equipped with a key switch, laser safety signs should be used. Laser products with power output near the upper range of Class 3B may also cause skin burns.
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Lock Out Tag Out}
-\begin{center}
-\includegraphics[width=4cm]{fig/loto.jpg}
-\end{center}
-
-\begin{itemize}
-\item Electrical Energy
-\item Mechanical Energy
-\item Mechanical Energy - Pneumatics
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Sharps}
-\begin{center}
-\includegraphics[width=6cm]{fig/sharps.png}
-\end{center}
-\end{frame}
-
-
-\begin{frame}\frametitle{High Voltage}
-\begin{center}
-\includegraphics[width=6cm]{fig/highV.jpg}
-\end{center}
-\end{frame}
-
-\section{Atomic Quantum Systems}
-
-\section{Vacuum Systems}
-
-
 \section{Geometric Optics}
 
 \begin{frame}\frametitle{Ray Nature of Light}
@@ -1270,12 +774,44 @@ The image in which light rays from one point on the object actually cross at the
 \end{column}
 \begin{column}{7cm}
 \begin{itemize}
-\item
-\item 
+\item Get a Thor CCD camera from the Optical Tweezer kit
+\item Select lens tube, adjustable lens tube, and lens
+\item Assemble and mount on table. 
+\item Connect to ThorCam software
+\item Using adjustable lens tube, focus on various objects
 \end{itemize}
 \end{column}
 \end{columns}
 \end{frame}
+
+\begin{frame}\frametitle{Optical System Parameters}
+\begin{columns}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/na.jpg}
+\includegraphics[width=4cm]{fig/dof.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Numerical Aperture (NA):
+\[NA = n \cdot sin(\alpha) \text{ where } \alpha = \frac{\theta}{2}\]
+\item \textit{f}-number - light per unit area reaching image plane:
+\[ \textit{f} / \# = \frac{f}{D} \approx \frac{1}{2 NA} \]
+\item Resolution and Depth of Focus:
+\[ R = \frac{1.22 \lambda}{2 NA}  \text{ and } DOF = \frac{ \lambda n}{NA^2} \]
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Aside: Camera \textit{f}-step}
+\begin{center}
+\includegraphics[width=10cm]{fig/aperture.jpg}
+\end{center}
+\[ \textit{f}/1 = \frac{f}{(\sqrt{2})^0}, \textit{f}/1.4 = \frac{f}{(\sqrt{2})^1}, \textit{f}/2 = \frac{f}{(\sqrt{2})^2}, \textit{f}/2.8 = \frac{f}{(\sqrt{2})^3},...\] 
+\end{frame}
+
 
 
 \begin{frame}\frametitle{Image Formation - Virtual Image}
@@ -1532,6 +1068,83 @@ The laser beam has a Gaussian profile.
 
 \end{frame}
 
+\section{Optical Tweezers}
+
+\begin{frame}\frametitle{Microscope}
+\begin{center}
+\includegraphics[width=8cm]{fig/microscope1.jpg}
+\end{center}
+
+\[ m = m_o \cdot m_e = (-\frac{d_i}{d_o}) \cdot (-\frac{d_i^\prime}{d_o^\prime}) \]
+
+\end{frame}
+
+\begin{frame}\frametitle{Optical Tweezers -  Collimated Laser}
+\begin{columns}
+\begin{column}{7cm}
+\begin{itemize}
+\item Ashkin's award was being given for his ability to "realize an old dream of science fiction – using the radiation pressure of light to move physical objects" aka the Tractor Beam.
+\item In 1987 Ashkin and his team were able to send a laser through a microscope's objective lens and trapping particles varying in size from a tens of nanometres up to tens of micrometres
+\end{itemize}
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/nobel2018.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Optical Tweezers -  Collimated Laser}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/otg1.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+When the bead is displaced from the beam center (right image), the larger momentum change of the more intense rays cause a net force to be applied back toward the center of the laser. When the bead is laterally centered on the beam (left image), the resulting lateral force is zero. But an unfocused laser still causes a force pointing away from the laser.
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Optical Tweezers - Focused Laser}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/otg2.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+In addition to keeping the bead in the center of the laser, a focused laser also keeps the bead in a fixed axial position: The momentum change of the focused rays causes a force towards the laser focus, both when the bead is in front (left image) or behind (right image) the laser focus. So, the bead will stay slightly behind the focus, where this force compensates the scattering force.
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Optical Tweezers}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/ot3.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+Over the next few days, we will take a few hours at a time to work on EDU-OT3
+\begin{itemize}
+\item Carefully get the parts for the Optical Tweezers from the cabinets
+\item Please don't write in the lab manuals, document progress in your notebooks.
+\item Follow assembly instructions
+\begin{itemize}
+\item Take your time, alignment is critical
+\item Take notes on the handouts on any documentation changes you feel are needed
+\end{itemize}
+\item Once constructed, follow the experiment instructions.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 
 \section{Mirrors}
 
@@ -1650,636 +1263,5 @@ For a mirror that is large compared to the radius of curvature, the reflected ra
 \end{center}
 
 \end{frame}
-
-\section{Wave Optics}
-
-\begin{frame}\frametitle{Corpuscular or Waves}
-\begin{columns}
-\begin{column}{5cm}
-In 1675, Sir Isaac Newton hypothesized that light was made up corpuscules (small particles) with the size/mass of the corresponding to different colors. 
-\begin{center}
-\includegraphics[width=2cm]{fig/corpReflect.png}
-\includegraphics[width=2cm]{fig/corpRefract.png}
-\end{center}
-
-\begin{center}
-\includegraphics[width=3cm]{fig/corpDoubleSlit.png}
-\end{center}
-\end{column}
-\begin{column}{6cm}
-In 1678, Christian Huygens, in order to explain the diffraction of light, proposed that every point on a wavefront is a source of wavelets that spread out in the forward direction at the same speed as the wave itself. The new wavefront is a line tangent to all of the wavelets.
-\begin{center}
-\includegraphics[width=5cm]{fig/huygens3.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{On the theory of light and color}
-
-\begin{center}
-\includegraphics[width=3cm]{fig/youngDoubleSlit.jpg}
-\end{center}
-
-Thomas Young, who had read Newton’s Opticks at age 17 saw some problems with Newton’s corpuscular theory.
-\begin{itemize}
-\item At interfaces (air/water) some light is reflected and some is refracted.
-\item Different colors refracted to different degrees
-\end{itemize} 
-
-Observing sound (a compression wave in air):
-\begin{itemize}
-\item When two waves of sound cross, they interfere with each other
-\item Light might exhibit interference phenomena as well
-\item Developed basic idea for the double-slit experiment, which demonstrated the interference of light waves.
-\end{itemize}
-\end{frame}
-
-\begin{comment}
-\begin{frame}\frametitle{Maxwell's Equations: Electric $\vec{E}$ and Magnetic $\vec{B}$ Fields}
-In 1864, James Clerk Maxwell predicted electromagnetic waves
-\begin{itemize}
-\item Gauss's Law: $\nabla \cdot \vec{E} = \frac{\rho}{\epsilon_0}$, where ${\rho}$ is enclosed charge
-\item Guass's Law for Magnets: $\nabla \cdot \vec{B} = 0$
-\item Farday's Law: $\nabla \times \vec{E} = -\frac{\partial \vec{B}}{\partial t}$
-\item Ampere's Law: $\nabla \times \vec{B} = \mu_0 \vec{J} + \mu_0 \epsilon_0 \frac{\partial \vec{E}}{\partial t}$
-\end{itemize}
-
-where \newline
-$\mu_0 = 4 \pi*10^{-7} \frac{F}{m}$ and 
-$\epsilon_0 = 8.85*10^{-12} \frac{N m^2}{C}$ \newline
-
-Maxwell noted that the speed of the electromagnetic wave is equal to the speed of light:
-
-
-$\frac{1}{\sqrt{\mu_0 \epsilon_0}}= \frac{1}{\sqrt{4 \pi*10^{-7} \cdot 8.85*10^{-12}}} = 2.99*10^{8} \frac{m}{s} = c$
-\end{frame}
-
-\begin{frame}\frametitle{Huygens's Principle: Diffraction}
-\begin{columns}
-\begin{column}{4.5cm}
-Every point on a wavefront is a source of wavelets that spread out in the forward direction at the same speed as the wave itself. The new wavefront is a line tangent to all of the wavelets.
-\end{column}
-\begin{column}{3.25cm}
-\begin{center}
-\includegraphics[width=2.5cm]{fig/huygens.jpg}
-\end{center}
-\end{column}
-\begin{column}{3.25cm}
-\begin{center}
-\includegraphics[width=3cm]{fig/huygens.png}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-\end{comment}
-
-\begin{frame}\frametitle{Assignment: Width of Human Hair}
-\begin{columns}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=4cm]{fig/waterloo.jpg}
-
-\vspace{.25cm}
-
-\includegraphics[width=4cm]{fig/hair.jpg}
-\end{center}
-\end{column}
-\begin{column}{7cm}
-\begin{itemize}
-\item Mount a hair and shine laser (of wavelength $\lambda$ through it at a screen
-\item Measure distance to the screen ($d$)
-\item Measure the distance between dark spots ($s$)
-\item Calculate the width of the hair ($w$)
-
-\[ w = \frac{2 d \lambda}{s} \]
-
-\item Try someone else's hair or a different color laser.
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
-
-
-
-
-\begin{frame}\frametitle{Diffraction}
-\begin{columns}
-\begin{column}{6cm}
-While the ray optics method is useful, if light indeed traveled in straight rays then there would be a pitch black shadow where the light is blocked by the wall.
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/doorway.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Diffraction}
-\begin{center}
-\includegraphics[width=8cm]{fig/diffraction.jpg}
-\end{center}
-
-If we pass light through smaller openings, often called slits, we can use Huygens’s principle to see that light bends. The bending of a wave around the edges of an opening or an obstacle is called diffraction. Diffraction is a wave characteristic and occurs for all types of waves.
-\end{frame}
-
-\begin{frame}\frametitle{Constructive Interference}
-\begin{center}
-\includegraphics[width=8cm]{fig/constructive.jpg}
-\end{center}
-
-
-\end{frame}
-
-
-\begin{frame}\frametitle{Destructive Interference}
-\begin{center}
-\includegraphics[width=8cm]{fig/destructive.jpg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Double Slit}
-\begin{center}
-\includegraphics[width=6cm]{fig/ds1.jpg}
-\includegraphics[width=6cm]{fig/ds2.jpg}
-\end{center}
-
-\end{frame}
-
-
-\begin{frame}\frametitle{Path Length Difference}
-\begin{columns}
-\begin{column}{7cm}
-\begin{itemize}
-\item Constructive Interference - peaks are in phase
-\[d \sin{(\theta}) = m \lambda, m = 0,1,-1,2,-2,....\]
-\item Destructive Interference - peaks are perfectly out of phase
-\[d \sin{(\theta}) = (m+\frac{1}{2})  \lambda, m = 0,1,-1,2,-2,....\]
-\end{itemize}
-\end{column}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=4cm]{fig/ds3.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Double Slit - Constructive Interference}
-\begin{center}
-\includegraphics[width=5cm]{fig/ds4.jpg}
-\end{center}
-\[ \tan{(\theta_1)} = \frac{y_1}{x} \]
-
-Using small angle assumption\footnote{for small angles ($\theta$) measured in radians, $tan(\theta) = sin(\theta) = \theta$.}:
-\[d y_1 = x \lambda \text{ for } m=1\]
-\[d = \frac{x}{y_1} \lambda \]
-
-\end{frame}
-
-\begin{frame}\frametitle{Single Slit}
-\begin{columns}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[height=7cm]{fig/sl2.jpg}
-\end{center}
-
-
-\end{column}
-\begin{column}{6cm}
-\begin{center}
-\includegraphics[width=3cm]{fig/sl1.jpg}
-
-\includegraphics[width=3cm]{fig/sl3.jpg}
-\end{center}
-\[D = \frac{2 x \lambda}{y_{dark}}\]
-\end{column}
-\end{columns}
-Double slit is actually the double slit result times the single slit.
-\end{frame}
-
-\begin{frame}\frametitle{Assignment: Calculate slit width and distance}
-
-\begin{center}
-\includegraphics[width=8cm]{fig/thorDouble.jpg}
-\end{center}
-
-\vspace{1cm}
-
-\begin{itemize}
-\item Calculate the slit distance and slit width for three different single/double slits. 
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}\frametitle{Diffraction Grating}
-\begin{columns}
-\begin{column}{5cm}
-If light is passed through a large number of evenly spaced parallel slits, called a diffraction grating, the interference pattern is created that is very similar to the one formed by a double slit. \newline
-
-Diffraction gratings can be made to work with the transmission or reflection of light. 
-\end{column}
-\begin{column}{6cm}
-\begin{center}
-\includegraphics[width=5.8cm]{fig/dg1.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-
-\begin{frame}\frametitle{Diffraction Grating - Constructive Interference}
-\begin{columns}
-\begin{column}{7cm}
-Similar to a double slit, the constructive interference happens on integral number of wavelengths:
-
-\[d \cdot sin(\theta) = m \lambda \]
-
-for, $m = 0, 1 , -1, 2, -2, ...$
-
-
-\end{column}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=3.8cm]{fig/dg2.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Diffraction Grating - Spread of Wavelength}
-\begin{columns}
-\begin{column}{7cm}
-We can find $\theta_R$, $y_R$, $\theta_V$, and $y_V$ by using:
-
-\[d \cdot sin(\theta) = m \lambda \]
-
-for, $m = 1$.
-
-
-\end{column}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=3.8cm]{fig/dg3.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-
-
-
-
-\begin{frame}\frametitle{Limits of Resolution}
-
-Diffraction affects the detail that can be observed when light passes through an aperture.
-
-\vspace{0.5cm}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/rayleigh1.jpg}
-\end{center}
-
-\end{frame}
-
-\begin{frame}\frametitle{Limits of Resolution}
-
-Diffraction affects the detail that can be observed when light passes through an aperture.
-
-\vspace{0.5cm}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/rayleigh1.jpg}
-\end{center}
-
-\end{frame}
-
-
-\begin{frame}\frametitle{Rayleigh Criterion}
-
-
-Two points are just resolved if they are separated by an angle of $\theta = 1.22 \frac{\lambda}{D}$
-
-\vspace{0.25cm}
-
-\begin{center}
-\includegraphics[width=8cm]{fig/rayleigh2.jpg}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Resolving Power}
-\begin{columns}
-\begin{column}{7cm}
-The resolving power of a system is the smallest distance of separation ($x$) where two objects can be seen as distinct. It is given by the Rayleigh Criterion:
-
-\[\theta = 1.22 \cdot \frac{\lambda}{D} = \frac{x}{d}\]
-where $d$ is the between the lens objective and the object.
-
-\end{column}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=3cm]{fig/rayleigh3.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Numerical Aperture (NA)}
-\begin{columns}
-\begin{column}{8cm}
-The Numerical Aperture ($NA$) is the maximum acceptance angle of a fiber or lens. The $NA$ is a measure of the ability to gather light and resolve detail.
-
-Using the $\alpha = \frac{\theta}{2}$ and the small angle approximation:
-
-\[ sin(\alpha) = \frac{D/2}{d} = \frac{D}{2d} \]
-
-The $NA$ is defined as $NA = n \cdot sin{\alpha}$ where $n$ is the index of refraction of the medium between the objective and point P.
-
-\[ x = 1.22\frac{\lambda d}{D} = 1.22 \frac{\lambda}{2 sin(\alpha)} = 0.61 \frac{\lambda n}{NA}\]
-
-\end{column}
-\begin{column}{3cm}
-\begin{center}
-\includegraphics[width=3cm]{fig/rayleigh3.jpg}
-\end{center}
-\end{column}
-
-\end{columns}
-
-\footnote{Small angle approximation: $\sin(\theta) = \theta$ where $\theta$ is measured in radians.}
-
-\end{frame}
-
-\begin{frame}\frametitle{Huygens's Mirror}
-\begin{columns}
-\begin{column}{6cm}
-A mirror reflects an incoming wave at an angle equal to the incident angle, verifying the law of reflection. As the wavefront strikes the mirror, wavelets are first emitted from the left part of the mirror and then the right. The wavelets closer to the left have had time to travel farther, producing a wavefront traveling in the direction shown.
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/huyMirror.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Speed of Light in a Medium}
-The speed of a wave is the frequency ($\frac{1}{s}$) times the wavelength ($m$):
-\begin{equation}
-c = f \lambda
-\end{equation}
-where in a vacuum, $c = 2.99 * 10^8 (\frac{m}{s})$. \newline
-
-Light has wave characteristics in a medium other than a vacuum, as well. In this case, the speed and wavelength change, but the frequency stays the same. The speed of light in a medium is governed by its index of refraction ($n$), where $v = \frac{c}{n}$. \newline
-
-Divide both sides of the above equation by $n$ yields:
-\begin{equation}
-v = \frac{c}{n} = \frac{f \lambda}{n} = f \lambda_n
-\end{equation}
-where $\lambda_n$ is the wavelength in the medium.
-\end{frame}
-
-\begin{frame}\frametitle{Huygens's Refraction}
-\begin{columns}
-\begin{column}{6cm}
-Each wavelet to the right was emitted when the wavefront crossed the interface between the media. Since the speed of light is slower in the second medium, the waves do not travel as far in a given time, and the new wavefront changes direction as shown. This explains why a ray changes direction to become closer to the perpendicular when light slows down and can be used to derive Snell's Law.
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/huyRefract.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\section{Interferometry}
-
-\begin{frame}\frametitle{Michelson Interferometer}
-
-Invented by the American physicist Albert Abraham Michelson in 1887.
-
-\begin{columns}
-\begin{column}{7cm}
-\begin{center}
-\includegraphics[width=7cm]{fig/michelson2.jpg}
-\end{center}
-\end{column}
-\begin{column}{3cm}
-\begin{enumerate}
-\item Laser
-\item Beam Splitter
-\item Mirror
-\item Screen
-\end{enumerate}
-\end{column}
-\end{columns}
-
-\vspace{0.25cm}
-
-\begin{itemize}
-\item Laser light is divided by the beamsplitter, the partial beams are reflected by the mirrors and overlap again at the beamsplitter.
-\item The light intensity on the screen is dependent on the path length difference ($\Delta s$) between the two paths $s_1$ and $s_2$. 
-\end{itemize}
-\end{frame}
-
-
-\begin{frame}\frametitle{Interferometer Math}
-\begin{itemize}
-\item The Electric Field ($E_i$) is given by
-\begin{equation}
-\vert E_i \vert = \sqrt{R \cdot T} \cos{(\omega t + \phi_i)}
-\end{equation}
-where $T$ is the transmission capacity of the beamsplitter, $R$ is the relection capacity, and $\phi_i$ is the phase which value is defined by the actual optical path.
-\item Intensity ($I$) on the screen is given by
-\begin{equation}
-I = c \epsilon_0 \vert E_1 + E_2 \vert^2
-\end{equation}
-\item If we assume that the transmission and reflection capacity are 0.5 then the average intensity ($\bar{I}$) is given by
-\begin{equation}
-\bar{I} = \frac{1}{4} c \epsilon_0 E_0^2 (1 + \cos{(\Delta \phi))}
-\end{equation}
-where $\Delta \phi = \frac{2 \pi}{\lambda} \Delta s$ and $\lambda$ is the wavelength
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Interferometer Math - what does it mean}
-Compare the centers:
-
-\begin{center}
-\includegraphics[width=10cm]{fig/fringe2.jpeg}
-\end{center}
-
-Why are there alternating concentric circles?
-\end{frame}
-
-
-\begin{frame}\frametitle{Assignment: Michelson Interferometer}
-\begin{columns}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=4.5cm]{fig/mint2.jpg}
-\end{center}
-\end{column}
-\begin{column}{6cm}
-Using the ThorLabs Michelson Interferometer Kit:
-\begin{itemize}
-\item Setup per Chapter 4
-\item Complete Preliminary Test (Chapter 6.1)
-\item Determine Laser Wavelenth (Chapter 6.2)
-\item When told: teardown setup, but keep optics in mounts
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Assignment: Michelson Interferometer 2}
-\begin{columns}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=4cm]{fig/michelson3.jpg}
-\end{center}
-\end{column}
-\begin{column}{6cm}
-Using the ThorLabs Michelson Interferometer Kit:
-\begin{itemize}
-\item Setup per Chapter 4
-\item Use as spectrometer (Chapter 6.3)
-\item Explore coherence (Chapter 6.4)
-\item When told: teardown setup, but keep optics in mounts
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Assignment: Michelson Interferometer 3}
-\begin{columns}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=4cm]{fig/michelson4.jpg}
-
-\vspace{0.25cm}
-
-\includegraphics[width=4cm]{fig/michelson5.jpg}
-\end{center}
-\end{column}
-\begin{column}{6cm}
-Using the ThorLabs Michelson Interferometer Kit:
-\begin{itemize}
-\item Setup per Chapter 4
-\item Measure index of refraction (Chapter 6.5)
-\item Measure thermal expansion (Chapter 6.6)
-\item When told: teardown setup completely and store
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
-
-\section{Polarization}
-
-\begin{frame}\frametitle{Electromagnetic Wave}
-
-\begin{center}
-\includegraphics[width=6cm]{fig/em_wave.png}
-\end{center}
-
-An Electromagnetic (EM) wave is a transverse wave where the electric and magnetic fields are perpendicular to each other and to the direction of propagation. 
-
-\begin{itemize}
-\item Light is called unpolarized if the direction of this electric field fluctuates randomly in time. 
-\item If the direction of the electric field of light is well defined, it is called polarized light. 
-\end{itemize}
-
-\end{frame}
-
-
-
-\begin{frame}\frametitle{Linear Polarization}
-
-We define the direction of polarization to be the direction parallel to the electric field.
-
-\begin{center}
-\includegraphics[width=6cm]{fig/polarization1.png}
-\end{center}
-
-\end{frame}
-
-\begin{frame}\frametitle{Linear Polarizer}
-
-Natural light has polarizations in random directions, it is unpolarized.
-
-\begin{center}
-\includegraphics[width=6cm]{fig/polarizer.jpg}
-\end{center}
-
-\end{frame}
-
-
-\begin{frame}\frametitle{Linear Polarization - Off Axis}
-
-\url{https://www.mathsisfun.com/algebra/vector-calculator.html}
-
-\begin{center}
-\includegraphics[width=12cm]{fig/pol1.jpg}
-\end{center}
-
-\begin{equation}
-\vec{E} = 3 \sin{(t)} \vec{i} + 4 \sin{(t)} \vec{j}
-\end{equation}
-
-\end{frame}
-
-\begin{frame}\frametitle{Circular Polarization}
-
-\url{https://www.mathsisfun.com/algebra/vector-calculator.html}
-
-
-\begin{center}
-\includegraphics[width=12cm]{fig/pol2.jpg}
-\end{center}
-
-X lags Y by $\frac{\pi}{2}$:
-\begin{equation}
-\vec{E} = 4 \sin{(t + \frac{\pi}{2})} \vec{i} + 4 \sin{(t)} \vec{j}
-\end{equation}
-
-\end{frame}
-
-
-\begin{frame}\frametitle{Incoming $45^\circ$ with Half-Wave Plate}
-From \url{https://emanim.szialab.org/}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/waveplate_45_2.png}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Incoming $45^\circ$ with Quarter-Wave Plate}
-From \url{https://emanim.szialab.org/}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/waveplate_45_4.png}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Incoming $37^\circ$ with Half-Wave Plate}
-From \url{https://emanim.szialab.org/}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/waveplate_37_2.png}
-\end{center}
-\end{frame}
-
-\begin{frame}\frametitle{Incoming $37^\circ$ with Quarter-Wave Plate}
-From \url{https://emanim.szialab.org/}
-
-\begin{center}
-\includegraphics[width=10cm]{fig/waveplate_37_4.png}
-\end{center}
-\end{frame}
-
-
-
-
 
 \end{document}
